--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         padding: 2.5rem 3.125rem;
       }
       .fix-pixel {
-        width: 28.125rem;
+        max-width: 28.125rem;
       }
     </style>
   </head>
